Revert "try to fix overflow problem"
This reverts commit b2b0d8e5a43bf411f0b3989be2082ad30a8f044a.

--- a/index.css
+++ b/index.css
@@ -172,7 +172,6 @@ footer {
     justify-content: center;
     align-items: center;
     border-top: 1px solid black;
-    overflow: hidden;
 
 }
 
